# HTTPageboy

./: .gitignore  Cargo.toml  LICENSE  README.md  error  log  tmp
examples/: api_consumer.rs
res/css/: main.css
res/html/: 404.html  index.html
src/: enum_http_codes.rs  lib.rs  macros.rs  main.rs  request.rs  request_handler.rs  request_type.rs  response.rs  routes.rs  server.rs  server_base.rs  status_code.rs  test_utils.rs  threadpool.rs  utils.rs
src/core/: handler.rs  mod.rs  request.rs  request_handler.rs  request_type.rs  status_code.rs  test_utils.rs  utils.rs
src/runtime/: mod.rs
src/runtime/async/: async-std.rs  async_std.rs  common.rs  shared.rs  smol.rs  tokio.rs
src/runtime/sync/: server.rs  threadpool.rs
src/utils/: aux.rs  threadpool.rs
tests/: test.rs  test1.rs  test_async.rs  test_async_smol.rs  test_async_std.rs  test_async_tokio.rs  test_sync.rs
