[package]
name = "httpageboy"
version = "1.0.1"
edition = "2021"
authors = ["fahedsl <fahedsl@yandex.com>"]
description = "Package for handling HTTP request and response transmission on the server side, without additional processing."
license = "MIT"
repository = "https://gitlab.com/numanope/eqeqo/bazoj/rs-http-server"

[lib]
name = "httpageboy"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
