[package]
name = "httpageboy"
version = "0.1.0"
edition = "2021"
authors = ["fahedsl <fahedsl@yandex.com>"]
description = "Handle HTTP request/response transmission on the server side without processing. It doesn't have any dependencies."
license = "MIT"
repository = "https://gitlab.com/numanope/libs/rs/http-server"
readme = "README.md"
keywords = ["http", "server", "request", "response"]
categories = ["network-programming", "web-programming::http-server"]
documentation = "https://docs.rs/httpageboy"
homepage = "https://gitlab.com/numanope/libs/rs/http-server"

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["sync"]
sync = []
async_tokio = []
async_smol = []
async_std = []
